Fix portfolio card image cropping

--- a/css/style.css
+++ b/css/style.css
@@ -544,7 +544,8 @@ h3 {
 .portfolio-image {
     width: 100%;
     height: 250px;
-    object-fit: cover;
+    object-fit: contain;
+    background-color: #f5f5f5;
 }
 
 /* FIX 3: Push the button to the bottom */
